force-app/main/default/objects/Acc_Monthly_Revenue_Rollup__c/Acc_Monthly_Revenue_Rollup__c.object-meta.xml
<CustomObject>
    <label>Acc Monthly Revenue Rollup</label>
    <nameField>
        <label>Acc Yearly Revenue Rollup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acc Monthly Revenue Rollups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>