force-app/main/default/objects/Acc_Monthly_Revenue_Rollup__c/fields/Acc_Yearly_Revenue_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Acc_Yearly_Revenue_Rollup__c</fullName>
    <label>Acc Yearly Revenue Rollup</label>
    <referenceTo>Acc_Yearly_Revenue_Rollup__c</referenceTo>
    <relationshipLabel>Acc Monthly Revenue Rollups</relationshipLabel>
    <relationshipName>Acc_Monthly_Revenue_Rollups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>