force-app/main/default/objects/Acc_Monthly_Revenue_Rollup__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Acc Monthly Revenue Rollups</relationshipLabel>
    <relationshipName>Acc_Monthly_Revenue_Rollups</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>