force-app/main/default/objects/Acc_Monthly_Revenue_Rollup__c/fields/Monthly_Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Actual_Revenue__c</fullName>
    <label>Monthly Actual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>