force-app/main/default/objects/Acc_Monthly_Revenue_Rollup__c/fields/Monthly_Revenue_Date__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Revenue_Date__c</fullName>
    <description>Hold the monthly revenue date</description>
    <label>Monthly Revenue Date</label>
    <type>Date</type>
</CustomField>