force-app/main/default/objects/Acc_Monthly_Revenue_Rollup__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <length>16</length>
    <type>Text</type>
</CustomField>