force-app/main/default/objects/Acc_Monthly_Revenue_Rollup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Monthly_Revenue_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Acc_Yearly_Revenue_Rollup__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Monthly_Actual_Revenue__c</columns>
    <columns>Monthly_Forecasted_Revenue__c</columns>
    <columns>Monthly_Forecasted_Revenue_Weighted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>